--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Along the way, you'll see how to create reports, leverage data lineage, and query individual datasets.\n",
     "\n",
-    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](docs:cellxgene).\n",
+    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](inv:cellxgene).\n",
     "\n",
     "Here, you will:\n",
     "\n",
@@ -222,7 +222,7 @@
     "\n",
     "```{note}\n",
     "\n",
-    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](docs:cellxgene) for an instance with ~1k h5ads and ~50 million cells.\n",
+    "To see the result of the incremental growth, take a look at the [CELLxGENE Census guide](inv:cellxgene) for an instance with ~1k h5ads and ~50 million cells.\n",
     "\n",
     "```"
    ]
