--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Along the way, you'll see how to create reports, leverage data lineage, and query individual datasets.\n",
     "\n",
-    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](inv:cellxgene).\n",
+    "If you're only interested in _using_ a large curated scRNA-seq collection, see the [CELLxGENE Census guide](inv:docs:cellxgene).\n",
     "\n",
     "Here, you will:\n",
     "\n",
