--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -240,8 +240,7 @@
     "collection = ln.Collection(\n",
     "    artifact, name=\"My versioned scRNA-seq collection\", version=\"1\"\n",
     ")\n",
-    "collection.save()\n",
-    "collection.labels.add_from(artifact)  # seed the initial labels of the collection"
+    "collection.save()"
    ]
   },
   {
