--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -295,9 +295,7 @@
     "    [artifact, collection_v1.artifacts[0]],\n",
     "    is_new_version_of=collection_v1,\n",
     ")\n",
-    "collection_v2.save()\n",
-    "collection_v2.labels.add_from(artifact)\n",
-    "collection_v2.labels.add_from(collection_v1)"
+    "collection_v2.save()"
    ]
   },
   {
