--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "query = ln.Artifact.filter(\n",
-    "    organism=organism.human,\n",
+    "    organisms=organism.human,\n",
     "    tissues=tissues.bone_marrow,\n",
     ")"
    ]
@@ -141,7 +141,6 @@
    "outputs": [],
    "source": [
     "query_set = ln.Artifact.filter().all()\n",
-    "\n",
     "artifact1, artifact2 = query_set[0], query_set[1]"
    ]
   },
