--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -157,7 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.add_new_from(\"donor\")"
+    "annotate.add_new_from(\"donor\")\n",
+    "annotate.add_new_from(\"cell_type\")"
    ]
   },
   {
