--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -215,10 +215,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But given the image is part of the notebook, we can also rely on the report that we create when saving the notebook via the command line via:\n",
+    "But given the image is part of the notebook, we can also rely on the report that we create when saving the notebook:\n",
     "\n",
     "```\n",
-    "lamin save <notebook_path>\n",
+    "ln.finish()\n",
     "```"
    ]
   },
