--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "storage_settings = ln.settings._storage_settings\n",
-    "if storage_settings.type == \"s3\"\n",
+    "if storage_settings.type == \"s3\":\n",
     "    storage_region = storage_settings.region\n",
     "    ctx = tiledbsoma.SOMATileDBContext(tiledb_config={\"vfs.s3.region\": storage_region})\n",
     "else:\n",
