--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -22,7 +22,9 @@
     "\n",
     "In some situations we want to concatenate all datasets to one big array store to speed up ad-hoc queries for slices for arbitrary metadata from the cloud.\n",
     "\n",
-    "This is what CELLxGENE does to create Census: a number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store. See how this looks for `cellxgene` here: {doc}`docs:cellxgene`."
+    "This is what CELLxGENE does to create Census: a number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store. See how this looks for `cellxgene` here: {doc}`docs:cellxgene`.\n",
+    "\n",
+    "For `tiledbsoma` append mode see also [this tutorial](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html) in the `tiledbsoma` documentation."
    ]
   },
   {
