use load instead of cache

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -34,7 +34,6 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import anndata as ad\n",
     "import pandas as pd\n",
     "\n",
     "import tiledbsoma\n",
@@ -131,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adatas = [ad.read_h5ad(artifact.cache()) for artifact in collection.artifacts]"
+    "adatas = [artifact.load() for artifact in collection.artifacts]"
    ]
   },
   {
