--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "This is what CELLxGENE does to create Census: a number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store. See how this looks for `cellxgene` here: {doc}`docs:cellxgene`.\n",
     "\n",
-    "For `tiledbsoma` append mode see also [this tutorial](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html) in the `tiledbsoma` documentation."
+    "See also [this tutorial](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html) in the `tiledbsoma` documentation explaining how to ingest multiple `AnnData` objects or `.h5ad` files into one SOMA Experiment."
    ]
   },
   {
@@ -84,23 +84,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare a path and a context for a new `tiledbsoma.Experiment`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soma_path = (ln.settings.storage / \"scrna.tiledbsoma\").as_posix()"
+    "## Prepare a path and connection options for SOMA Experiment"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We need to create a context with region information for the instance storage if the storage is an `s3` bucket and is not on `us-east-1`."
+    "Prepare a path and a context for a new `tiledbsoma.Experiment`. We will create our SOMA Experiment in the instance root with the storage name `\"scrna.tiledbsoma\"`. "
    ]
   },
   {
@@ -109,12 +100,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "storage_settings = ln.settings._storage_settings\n",
+    "storage_settings = ln.setup.settings.storage\n",
+    "\n",
+    "soma_path = (storage_settings.root / \"scrna.tiledbsoma\").as_posix()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This is relevant only if the path is in `s3`**. We need to create a context with region information for the instance storage if the storage is an `s3` bucket and is not on `us-east-1`. Because we create the experiment in the instance storage root, we can get the region information from `ln.setup.settings.storage`. You can find more about `tiledb` configuration parameters in the `tiledb` [documentation](https://docs.tiledb.com/main/how-to/configuration). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if storage_settings.type == \"s3\":\n",
     "    storage_region = storage_settings.region\n",
     "    ctx = tiledbsoma.SOMATileDBContext(tiledb_config={\"vfs.s3.region\": storage_region})\n",
     "else:\n",
     "    ctx = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare the AnnData objects in the collection for ingestion"
    ]
   },
   {
@@ -137,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute the intercetion of all columns."
+    "Compute the intersetion of all columns. All `AnnData` objects should have the same columns in their `.obs`, `.var`, `.raw.var` to be ingested into one `tiledbsoma.Experiment`."
    ]
   },
   {
@@ -155,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare the `AnnData` objects for concatenation. Prepare id fields, sanitize `index` names, intersect columns, drop slots."
+    "Prepare the `AnnData` objects for concatenation. Prepare id fields, sanitize `index` names, intersect columns, drop slots. Here we have to drop `.obsp`, `.uns` and also columns from the dataframes that are not in the intersections obtained above, otherwise the ingestion will fail. We will need to provide `obs` and `var` names in `tiledbsoma.io.register_anndatas`, so we create these fileds (`obs_id`, `var_id`) from the dataframe indices."
    ]
   },
   {
@@ -187,6 +202,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Insgest the AnnData objects into a SOMA Experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Register all the AnnData objects. Pass `experiment_uri=None` because `tiledbsoma.Experiment` doesn't exist yet"
    ]
   },
@@ -210,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ingest the `AnnData` objects sequentially, providing the context."
+    "Ingest the `AnnData` objects sequentially, providing the context. This saves the `AnnData` objects into one store."
    ]
   },
   {
@@ -227,6 +249,13 @@
     "        registration_mapping=registration_mapping,\n",
     "        context=ctx\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register the experiment as a lamindb Artifact"
    ]
   },
   {
@@ -250,7 +279,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open and query the experiment."
+    "## Access the experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Open and query the experiment. We can use the path from the registered `Artifact`."
    ]
   },
   {
