--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -11,20 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Transform a number of array shards to a single array store"
+    "# Concatenate datasets to a single array store"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the previous notebooks, we've seen how to incrementally create a collection of datasets and train models on it.\n",
+    "In the previous notebooks, we've seen how to incrementally create a collection of scRNA-seq datasets and train models on it.\n",
     "\n",
-    "In some situations we want to concatenate all datasets to one big array store to speed up ad-hoc queries for slices for arbitrary metadata from the cloud.\n",
+    "Sometimes we want to concatenate all datasets into one big array to speed up ad-hoc queries for slices for arbitrary metadata (see this [blog post](https://lamin.ai/blog/arrayloader-benchmarks)). This is what CELLxGENE does to create Census: a number of `.h5ad` files are concatenated to give rise to a single `tiledbsoma` array store ({doc}`docs:cellxgene`).\n",
     "\n",
-    "This is what CELLxGENE does to create Census: a number of `.h5ad` files are concatenated to give rise to a single TileDB-SOMA array store. See how this looks for `cellxgene` here: {doc}`docs:cellxgene`.\n",
+    ":::{note}\n",
     "\n",
-    "See also [this tutorial](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html) in the `tiledbsoma` documentation explaining how to ingest multiple `AnnData` objects or `.h5ad` files into one SOMA Experiment."
+    "This notebook is based on [the tiledbsoma documentation](https://tiledbsoma.readthedocs.io/en/latest/notebooks/tutorial_soma_append_mode.html).\n",
+    "\n",
+    ":::"
    ]
   },
   {
@@ -35,10 +37,8 @@
    "source": [
     "import lamindb as ln\n",
     "import pandas as pd\n",
-    "\n",
     "import tiledbsoma\n",
     "import tiledbsoma.io\n",
-    "\n",
     "from functools import reduce"
    ]
   },
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Retrieve the collection of `h5ad` files to be concatenated into a SOMA Experiment."
+    "Query the collection of `h5ad` files that we'd like to convert into a single array."
    ]
   },
   {
@@ -68,15 +68,7 @@
    "source": [
     "collection = ln.Collection.filter(\n",
     "    name=\"My versioned scRNA-seq collection\", version=\"2\"\n",
-    ").one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ").one()\n",
     "collection.describe()"
    ]
   },
@@ -84,14 +76,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare a path and connection options for SOMA Experiment"
+    "## Prepare the SOMA array"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prepare a path and a context for a new `tiledbsoma.Experiment`. We will create our SOMA Experiment in the instance root with the storage name `\"scrna.tiledbsoma\"`. "
+    "Prepare a path and a context for a new `tiledbsoma.Experiment`.\n",
+    "\n",
+    "We will create our array store at the LaminDB instance root with folder name `\"scrna.tiledbsoma\"`."
    ]
   },
   {
@@ -101,15 +95,14 @@
    "outputs": [],
    "source": [
     "storage_settings = ln.setup.settings.storage\n",
-    "\n",
-    "soma_path = (storage_settings.root / \"scrna.tiledbsoma\").as_posix()"
+    "soma_path = (storage_settings.root / \"scrna.tiledbsoma\").as_posix()  # we could take any AWS S3 path, here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This is relevant only if the path is in `s3`**. We need to create a context with region information for the instance storage if the storage is an `s3` bucket and is not on `us-east-1`. Because we create the experiment in the instance storage root, we can get the region information from `ln.setup.settings.storage`. You can find more about `tiledb` configuration parameters in the `tiledb` [documentation](https://docs.tiledb.com/main/how-to/configuration). "
+    "**If our path is on `AWS S3`,** we need to create a context with region information (exception: `us-east-1`). You can find more about `tiledb` configuration parameters in the `tiledb` [documentation](https://docs.tiledb.com/main/how-to/configuration). "
    ]
   },
   {
@@ -118,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if storage_settings.type == \"s3\":\n",
+    "if storage_settings.type == \"s3\":  # if the storage location is on AWS S3\n",
     "    storage_region = storage_settings.region\n",
     "    ctx = tiledbsoma.SOMATileDBContext(tiledb_config={\"vfs.s3.region\": storage_region})\n",
     "else:\n",
@@ -129,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the AnnData objects in the collection for ingestion"
+    "## Prepare the AnnData objects"
    ]
   },
   {
@@ -202,14 +195,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Insgest the AnnData objects into a SOMA Experiment"
+    "## Create the SOMA array"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register all the AnnData objects. Pass `experiment_uri=None` because `tiledbsoma.Experiment` doesn't exist yet"
+    "Register all the AnnData objects. Pass `experiment_uri=None` because `tiledbsoma.Experiment` doesn't exist yet:"
    ]
   },
   {
@@ -232,13 +225,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ingest the `AnnData` objects sequentially, providing the context. This saves the `AnnData` objects into one store."
+    "Ingest the `AnnData` objects sequentially, providing the context. This saves the `AnnData` objects in one array store."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "for adata in adatas:\n",
@@ -255,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register the experiment as a lamindb Artifact"
+    "## Register the SOMA array"
    ]
   },
   {
@@ -271,15 +268,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact_soma = ln.Artifact(soma_path, description=\"My scRNA-seq SOMA Experiment\")\n",
-    "artifact_soma.save()"
+    "soma_artifact = ln.Artifact(soma_path, description=\"My scRNA-seq SOMA Experiment\").save()\n",
+    "soma_artifact.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access the experiment"
+    "## Query the array"
    ]
   },
   {
@@ -295,34 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = tiledbsoma.Experiment.open(artifact_soma.path.as_posix(), context=ctx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "experiment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "experiment[\"obs\"].read().concat().to_pandas()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "experiment.close()"
+    "with tiledbsoma.Experiment.open(soma_artifact.path.as_posix(), context=ctx) as soma_array:\n",
+    "    print(soma_array[\"obs\"].read().concat().to_pandas())"
    ]
   }
  ],
