--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -45,7 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.settings.transform.stem_uid = \"oJN8WmVrxI8m\"\n",
@@ -63,7 +67,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "collection = ln.Collection.filter(\n",
@@ -259,13 +267,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register the created `tiledbsoma.Experiment` storage in `lamindb`."
+    "Register the created `tiledbsoma.Experiment` store in `lamindb`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "soma_artifact = ln.Artifact(soma_path, description=\"My scRNA-seq SOMA Experiment\").save()\n",
@@ -289,7 +301,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "with tiledbsoma.Experiment.open(soma_artifact.path.as_posix(), context=ctx) as soma_array:\n",
