📝 More consistent language in headings

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare the SOMA array"
+    "## Prepare the array store"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the SOMA array"
+    "## Create the array store"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register the SOMA array"
+    "## Register the array store"
    ]
   },
   {
