--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey)\n",
     "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)\n",
-    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Nv48yAceNSh8z8)"
+    "[![lamindata](https://img.shields.io/badge/Source%20%26%20report%20on%20LaminHub-mediumseagreen)](https://lamin.ai/laminlabs/lamindata/transform/Nv48yAceNSh87CpJ/QtqH9DLlh3aEUnYu4oe7)"
    ]
   },
   {
@@ -44,6 +44,16 @@
     "scrna4\n",
     "scrna5\n",
     "scrna6\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install the `lamindb` Python package:\n",
+    "```shell\n",
+    "pip install 'lamindb[jupyter,aws,bionty]'\n",
     "```"
    ]
   },
