use backed to connect to soma

--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -295,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Open and query the experiment. We can use the path from the registered `Artifact`."
+    "Open and query the experiment. We can use the registered `Artifact`."
    ]
   },
   {
@@ -308,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "with tiledbsoma.Experiment.open(soma_artifact.path.as_posix(), context=ctx) as soma_array:\n",
+    "with soma_artifact.backed() as soma_array:\n",
     "    print(soma_array[\"obs\"].read().concat().to_pandas())"
    ]
   }
