--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(\n",
+    "annotate = ln.Curate.from_anndata(\n",
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id, \n",
     "    categoricals={\n",
