--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's validate & annotate this artifact:"
+    "Let's validate & curate this artifact:"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Curate.from_anndata(\n",
+    "curate = ln.Curate.from_anndata(\n",
     "    adata, \n",
     "    var_index=bt.Gene.ensembl_gene_id, \n",
     "    categoricals={\n",
@@ -149,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.add_new_from_var_index()"
+    "curate.add_new_from_var_index()"
    ]
   },
   {
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
@@ -167,8 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.add_new_from(\"donor\")\n",
-    "annotate.add_new_from(\"cell_type\")"
+    "curate.add_new_from(\"donor\")\n",
+    "curate.add_new_from(\"cell_type\")"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.add_validated_from(\"all\")"
+    "curate.add_validated_from(\"all\")"
    ]
   },
   {
@@ -186,14 +186,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate.validate()"
+    "curate.validate()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we create a {class}`~lamindb.Artifact` object from an `AnnData`, we automatically annotate it with validated features and labels:"
+    "When we create a {class}`~lamindb.Artifact` object from an `AnnData`, we automatically curate it with validated features and labels:"
    ]
   },
   {
@@ -206,7 +206,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"Human immune cells from Conde22\")"
+    "artifact = curate.save_artifact(description=\"Human immune cells from Conde22\")"
    ]
   },
   {
