--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's validate & curate this artifact:"
+    "Let's curate this artifact:"
    ]
   },
   {
