--- a/docs/scrna3.ipynb
+++ b/docs/scrna3.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could either load the artifacts into memory or access them in `backed` mode through `.backed()` to lazily load their content.\n",
+    "We could either load the artifacts into memory or access them in `backed` mode through `.open()` to lazily load their content.\n",
     "\n",
     "Let's load them into memory:"
    ]
