--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -308,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "with soma_artifact.backed() as soma_array:\n",
+    "with soma_artifact.open() as soma_array:\n",
     "    print(soma_array[\"obs\"].read().concat().to_pandas())"
    ]
   }
