--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -469,7 +469,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.PublicSource.filter(entity=\"Gene\").df()"
+    "bt.Source.filter(entity=\"Gene\").df()"
    ]
   },
   {
@@ -485,10 +485,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "public_source = bt.PublicSource.filter(\n",
+    "source = bt.Source.filter(\n",
     "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
     ").one()\n",
-    "public = bt.Gene.public(public_source=public_source)\n",
+    "public = bt.Gene.public(source=source)\n",
     "public"
    ]
   },
@@ -509,7 +509,7 @@
    },
    "outputs": [],
    "source": [
-    "bt.PublicSource.filter(currently_used=True).df()"
+    "bt.Source.filter(currently_used=True).df()"
    ]
   }
  ],
@@ -529,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
