🔇 Remove setup section

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -48,16 +48,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[jupyter,aws,bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -67,6 +57,7 @@
    },
    "outputs": [],
    "source": [
+    "# pip install 'lamindb[jupyter,aws,bionty]'\n",
     "!lamin init --storage ./test-scrna --schema bionty"
    ]
   },
@@ -319,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   },
   "nbproject": {
    "id": "Nv48yAceNSh8",
