--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -20,28 +20,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Setup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install the `lamindb` Python package:\n",
-    "```shell\n",
-    "pip install 'lamindb[bionty]'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pip install 'lamindb[bionty]'\n",
     "!lamin init --storage ./test-public-ontologies --schema bionty"
    ]
   },
