--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -35,7 +35,6 @@
     "import bionty as bt\n",
     "\n",
     "ln.settings.verbosity = \"hint\"\n",
-    "bt.settings.auto_save_parents = False\n",
     "ln.settings.transform.stem_uid = \"ManDYgmftZ8C\"\n",
     "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
@@ -347,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.1.-1"
   },
   "nbproject": {
    "id": "ManDYgmftZ8C",
