--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.artifacts"
+    "collection.ordered_artifacts"
    ]
   },
   {
