--- a/docs/scrna4.ipynb
+++ b/docs/scrna4.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection.artifacts.df()"
+    "collection.ordered_artifacts.df()"
    ]
   },
   {
