--- a/docs/scrna6.ipynb
+++ b/docs/scrna6.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adatas = [artifact.load() for artifact in collection.artifacts]"
+    "adatas = [artifact.load() for artifact in collection.ordered_artifacts]"
    ]
   },
   {
