--- a/docs/gene.ipynb
+++ b/docs/gene.ipynb
@@ -450,10 +450,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "bt.Gene.list_source().df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.Source.filter(entity=\"Gene\").df()"
+    "# only lists the sources that are currently used\n",
+    "bt.Gene.list_source(currently_used=True).df()"
    ]
   },
   {
@@ -470,7 +484,7 @@
    "outputs": [],
    "source": [
     "source = bt.Source.filter(\n",
-    "    source=\"ensembl\", version=\"release-110\", organism=\"human\"\n",
+    "    name=\"ensembl\", version=\"release-112\", organism=\"human\"\n",
     ").one()\n",
     "public = bt.Gene.public(source=source)\n",
     "public"
@@ -513,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
