--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -290,7 +290,7 @@
    "outputs": [],
    "source": [
     "collection_v2 = ln.Collection(\n",
-    "    [artifact, collection_v1.artifacts.first()],\n",
+    "    [artifact, collection_v1.ordered_artifacts.first()],\n",
     "    is_new_version_of=collection_v1,\n",
     ")\n",
     "collection_v2.save()"
